2005-04-16  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-old-xml.c (mrp_old_xml_parse): Align the start
	time to the start of the day, fixes bug #172292.

	* autogen.sh:
	* data/Makefile.am:
	* libplanner/Makefile.am:
	* libplanner/mrp-marshal-main.c:
	* python/Makefile.am:
	* src/Makefile.am:
	* src/planner-marshal-main.c:
	* src/planner-usage-view.c: Clean up and build.

2005-04-16  Richard Hult  <richard@imendio.com>

	* src/planner-usage-*: Rename from planner-ttable-*.

	* src/Makefile.am: Reorganize views and make them
	builtin. Simplify a lot.

	* src/planner-gantt-view.[ch]:
	* src/planner-resource-view.[ch]:
	* src/planner-ttable-view.[ch]:
	* src/planner-task-view.[ch]: Adapt to the new view interface.

	* src/planner-ttable-*: s/ttable/usage/.

	* src/planner-view-loader.[ch]:
	* src/planner-view.[ch]: Remove module loading.
	* src/planner-window.c: (window_populate): Create the builtin
	views.

2005-04-16  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-row.c: Make the shadow and highlight colors to
	be a bit less pronounced, use separate colors for the critical
	path shadow and highlight.

	* src/planner-ttable-row.c: As above + use separate shadow and
	highlight colors for free/overuse/underuse. Also remove lots of
	code that's been commented out.

2005-04-16  Richard Hult  <richard@imendio.com>

	* src/planner-html-plugin.c (html_plugin_show_url): Patch from
	Francisco to use gnome_url_show.

2005-04-15  Richard Hult  <richard@imendio.com>

	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/html1_gantt.xsl: Update style a bit and make
	only the gantt part of the chart scrollable, fixes bug #300609.

	* src/planner-html-plugin.c (html_plugin_export): Set default
	response. Remove unused include.

2005-04-14  Richard Hult  <richard@imendio.com>

	* src/planner-main.c: (main): Use goption, another patch from
	Francisco.

	* libplanner/mrp-project.c: (mrp_project_load): Fix leak, patch
	from Francisco.
