@@ -1,3 +1,8 @@
+2005-04-18  Richard Hult  <richard@imendio.com>
+
+	* libplanner/Makefile.am:
+	* src/Makefile.am: Fix build.
+
 2005-04-16  Richard Hult  <richard@imendio.com>
 
 	* libplanner/mrp-old-xml.c (mrp_old_xml_parse): Align the start
